-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5
-
None
-
Confirmed in Windows 11, Qt 6.5, Qt Creator 10.0.2
-
-
c3dbb5b6f (dev)
Summary: Flat variables don't get parsed correctly
Parsed shaders can be output by setting the
QT_RHI_SHADER_DEBUG=1 runtime
flag!
Input
flat varying out vec4 myVar1; varying flat out vec4 myVar2;
Current Output after compilation
layout(location=7) out vec4 myVar1; layout(location=8) out vec4 myVar2; flat flat
Expected Output after compilation
layout(location=7) flat out vec4 myVar1; layout(location=8) flat out vec4 myVar2;
Notes:
Code and output written from memory. I did not confirm if the issue affects both IN and OUT variables.
| For Gerrit Dashboard: QTBUG-115972 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 561053,3 | Add support for flat varyings | dev | qt/qtquick3d | Status: MERGED | +2 | +1 |